force-app/main/default/objects/ADM_Release_Burndown_Item__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>