force-app/main/default/objects/ADM_Release_Burndown_Item__c/fields/Story_Points__c.field-meta.xml
<CustomField>
    <fullName>Story_Points__c</fullName>
    <label>Story Points</label>
    <precision>12</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>