force-app/main/default/objects/ADM_Release_Burndown_Item__c/fields/Team_Release__c.field-meta.xml
<CustomField>
    <fullName>Team_Release__c</fullName>
    <label>Team Release</label>
    <referenceTo>ADM_Team_Release__c</referenceTo>
    <relationshipName>Release_Burndown_Item_2</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>