force-app/main/default/objects/ADM_Release_Burndown_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Story_Points__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Team_Release__c</columns>
    <columns>Type__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>